Opened 2 years ago

Closed 2 years ago

#18245 closed bug (fixed)

app_server: crash on exit caused by illegal memory free in FontFamily

Reported by: X512 Owned by: axeld
Priority: normal Milestone: R1/beta5
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev56688.

Reproduced with test_app_server by quitting it. Seems caused by recent changes introducing GlobalFontManager.

Attachments (1)

test_app_server-95759-debug-05-02-2023-08-17-18.report (33.5 KB ) - added by X512 2 years ago.

Download all attachments as: .zip

Change History (2)

comment:1 by waddlesplash, 2 years ago

Milestone: UnscheduledR1/beta5
Resolution: fixed
Status: newclosed

Fix merged in hrev56753.

Note: See TracTickets for help on using tickets.